--- a/style.css
+++ b/style.css
@@ -19,21 +19,17 @@ h3{
 
 
 /* CSS For Portfolio Columns */
-
 .mycon{
     margin-top: 20px;
-    /* border: 1px solid black; */
-    background-color: white;
+    background-color: #dbdbdb;
 }
 .myrow{
-    /* border: 1px solid red; */
-    background-color: white;
+    background-color: #dbdbdb;
 }
 .myrow2{
     margin-bottom: 25px;
 }
 .mycol{
     margin: 5px;
-    /* border: 1px solid green; */
-    background-color: #f0f0f0;
+    background-color: white;
 }
